Fix #1203 icon alignment variable

--- a/src/definitions/elements/header.less
+++ b/src/definitions/elements/header.less
@@ -70,6 +70,9 @@
   display: inline-block;
   vertical-align: @contentAlignment;
 }
+.ui.header .icon + .content {
+  vertical-align: @contentIconAlignment;
+}
 
 /* Positioning */
 .ui.header:first-child {
